syntax = "proto3";

package mainflux;

service ThingsService {
    rpc CanAccess(AccessReq) returns (ThingID) {}
    rpc Identify(Token) returns (ThingID) {}
}

service UsersService {
    rpc Identify(Token) returns (UserID) {}
}

message AccessReq {
    string token = 1;
    uint32 chanID = 2;
}

message ThingID {
    uint32 value = 1;
}

message Token {
    string value = 1;
}

message UserID {
    string value = 1;
}
